change swagger models and controllers, add mock controller
